k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  labels:
    app: web
  annotations:
    cloud.google.com/backend-config: '{"default": "web-app-backendconfig"}'
spec:
  # NodePort потрібен для коректної роботи GCE Ingress (забезпечує доступність ззовні)
  type: NodePort
  selector:
    app: web # Знаходить поди з цією міткою
  ports:
    - name: http
      port: 80
      targetPort: 8080    # Перенаправляє трафік на порт 8080 контейнера
      protocol: TCP
